# dllPlayground

./: .gitignore  README.md
anotherDll/: CMakeLists.txt  library.h  library.hxx  libraryApi.cpp  libraryApi.h  main.cpp
myexe/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  main.cpp  mylib.cpp  mylib.h  mylib.hxx  mylibApi.cpp  mylibApi.h  mylib_export.h
mylib/src/: main.cpp  mylib.cpp  mylib.h  mylib.hxx  mylibApi.h
noTemplate/: CMakeLists.txt  library.cpp  library.h
